# COMPADRE

./: .gitignore  Dockerfile.dockerhub  Dockerfile.github  README.md  compadre.py  compadre_env.yml  ersa.py
ersa_api/: pyproject.toml
ersa_api/src/ersa_helper/: compadre.py  ersa.py
ersa_helper/: README.md  pyproject.toml
ersa_helper/src/ersa_helper/: compadre.py  main.py  pop_classifier.py
ibd_db/: Dockerfile  README.md  compose.yml  pyproject.toml
ibd_db/scripts/: load_segments.py
ibd_db/src/ibd_db/: main.py
lib/perl_modules/LogConfig/: configure.pm
lib/perl_modules/PRIMUS/: prePRIMUS_pipeline_v7.pm  predict_relationships_2D.pm  reconstruct_pedigree_v7.pm
lib/perl_modules/Socket/: socket_helper.pm
tools/: simulate_age.py
